--- a/me/index.html
+++ b/me/index.html
@@ -282,6 +282,7 @@
           	errorContainer.html('Error : you must fill at least one field');
           } else {
           	errorContainer.empty();
+          	$lifestream.html('<img src="loading.gif" alt="loading" />');
           	$('html,body').animate( {scrollTop:0} );
           }
 
