Added alt attributes on zip and tar images

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <div class="download">
       <a href="http://github.com/christianv/jquery-lifestream/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+        <img border="0" width="90" alt="zip" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/christianv/jquery-lifestream/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+        <img border="0" width="90" alt="tar" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
     <h1><a href="http://github.com/christianv/jquery-lifestream">jQuery Lifestream</a>
