--- a/download/index.html
+++ b/download/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Custom Download Builder</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
   <form action="#">
