Modified buttons on download page

--- a/download/index.html
+++ b/download/index.html
@@ -11,7 +11,10 @@
     <fieldset>
       <legend>Custom Download Builder</legend>
       <div id="button-bar">
-        <button id="button">Build Script</button>
+        <p>
+          <button id="build">Build script</button>
+        </p>
+        <p id="download"></p>
       </div>
     </fieldset>
   </form>
