Added a reset button on download page

--- a/download/index.html
+++ b/download/index.html
@@ -14,7 +14,9 @@
         <p>
           <button id="build">Build script</button>
         </p>
-        <p id="download"></p>
+        <p id="download">
+          <button id="reset">Reset</button>
+        </p>
       </div>
     </fieldset>
   </form>
